--- a/.fluxbox/styles/Template/theme.cfg
+++ b/.fluxbox/styles/Template/theme.cfg
@@ -1,7 +1,9 @@
 !
-! fluxbox style - [TEMPLATE]
+! fluxbox style - ceres
 ! created by PackRat
-! creation date - 10-14-2018
+! creation date - 10-12-2018
+!
+! based on deepin-dark-mod by cog - https://bitbucket.org/rstrcogburn/themes
 !
 ! This program is free software: you can redistribute it and/or modify
 ! it under the terms of the GNU General Public License as published by
@@ -14,15 +16,15 @@
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
 !FONT OPTIONS
-*.font:                           Fantasque Sans Mono-11:Regular
-!toolbar.workspace.font:          Fira Code-11:Regular
-!toolbar.clock.font:              Fira Code-11:Regular
-!window.font:                     Monospace-10:Regular
-!menu.frame.font:                 Sans-11:Regular
-!menu.hilite.font:                Amiko-11:semibold
-!menu.title.font:                 Amiko-11:semibold
+*.font:                          SF Pro Text-10:regular
+toolbar.workspace.font:          SF Mono-11:Regular
+toolbar.clock.font:              SF Mono-11:Regular
+!window.font:                    Sans-11:Regular
+!menu.frame.font:                Sans-11:Regular
+!menu.hilite.font:                Calcutta-11:Bold
+!menu.title.font:                Amiko-11:semibold
 !toolbar.iconbar.focused.font:    Amiko-11:semibold
-!toolbar.iconbar.unfocused.font:  Sans-11:Regular
+!toolbar.iconbar.unfocused.font: Sans-11:Regular
 
 !menu.title.effect: shadow
 !menu.title.shadow.color: red
@@ -30,28 +32,28 @@
 !TOOLBAR OPTIONS
 
 toolbar:                        flat gradient vertical
-toolbar.height:                 26
+toolbar.height:                 24
 toolbar.shaped:                 false
-toolbar.bevelWidth:             0
+toolbar.bevelWidth:             4
 toolbar.borderColor:            #121212
 toolbar.borderWidth:            1
-toolbar.color:                  #E2E5E7
-toolbar.colorTo:                #E2E5E7
+toolbar.color:                  #E3DDD1
+toolbar.colorTo:                #E3DDD1
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
-toolbar.clock.borderColor:      #E2E5E7
+toolbar.clock.borderColor:      #121212
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #E2E5E7
-toolbar.clock.colorTo:          #E2E5E7
+toolbar.clock.color:            #E3DDD1
+toolbar.clock.colorTo:          #E3DDD1
 toolbar.clock.textColor:        #121212
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
-toolbar.workspace.borderColor: #E2E5E7
+toolbar.workspace.borderColor:  #121212
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #E2E5E7
-toolbar.workspace.colorTo:      #E2E5E7
+toolbar.workspace.color:        #E3DDD1
+toolbar.workspace.colorTo:      #E3DDD1
 toolbar.workspace.textColor:    #121212
 
 toolbar.systray:    parentrelative
@@ -60,26 +62,26 @@ toolbar.button.PicColor:   #121212
 toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.borderColor:    #838383
+toolbar.iconbar.borderColor:    #E3DDD1
 toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #E2E5E7
-toolbar.iconbar.empty.colorTo:  #E2E5E7
+toolbar.iconbar.empty.color:    #E3DDD1
+toolbar.iconbar.empty.colorTo:  #E3DDD1
 
 toolbar.iconbar.focused:              flat gradient vertical
 toolbar.iconbar.focused.justify:      Center
-toolbar.iconbar.focused.borderColor:  #838383
-toolbar.iconbar.focused.borderWidth:  1
-toolbar.iconbar.focused.color:        #362E69
-toolbar.iconbar.focused.colorTo:      #362E69
-toolbar.iconbar.focused.textColor:    #E2E5E7
+toolbar.iconbar.focused.borderColor:  #E3DDD1
+toolbar.iconbar.focused.borderWidth:  4
+toolbar.iconbar.focused.color:        #2B451E
+toolbar.iconbar.focused.colorTo:      #2B451E
+toolbar.iconbar.focused.textColor:    #D2D2D2
 
 toolbar.iconbar.unfocused:              flat gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.borderColor:  #838383
-toolbar.iconbar.unfocused.borderWidth:  1
-toolbar.iconbar.unfocused.color:       #E2E5E7
-toolbar.iconbar.unfocused.colorTo:     #E2E5E7
-toolbar.iconbar.unfocused.textColor:    #121212
+toolbar.iconbar.unfocused.borderColor:  #E3DDD1
+toolbar.iconbar.unfocused.borderWidth:  4
+toolbar.iconbar.unfocused.color:       #2B451E
+toolbar.iconbar.unfocused.colorTo:     #2B451E
+toolbar.iconbar.unfocused.textColor:   #D2D2D2
 
 !WINDOW OPTIONS
 
@@ -91,86 +93,86 @@ window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
 !window.frame.focusColor:        parentrelative
-!window.frame.unfocusColor:      parentrelative
+!window.frame.unfocusColor:      pafrentrelative
 !window.label.active:            <texture type>
-!window.label.active.textColor:  blue
+!window.label.active.textColor:  <color>
 
 window.title.focus:             flat gradient vertical
-window.title.focus.color:       #E2E5E7
-window.title.focus.colorTo:     #E2E5E7
+window.title.focus.color:       #222223
+window.title.focus.colorTo:     #222223
 
 window.title.unfocus:           flat gradient vertical
-window.title.unfocus.color:     #E2E5E7
-window.title.unfocus.colorTo:   #E2E5E7
+window.title.unfocus.color:     #222223
+window.title.unfocus.colorTo:   #222223
 
-window.label.focus:             flat
-window.label.focus.color:       #362E69
-window.label.focus.colorTo:     #362E69
-window.label.focus.textColor:   #E2E5E7
+window.label.focus:             flat gradient elliptic
+window.label.focus.color:       #2B451E
+window.label.focus.colorTo:     #2B451E
+window.label.focus.textColor:   #D2D2D2
 
 window.label.unfocus:           flat gradient vertical
-window.label.unfocus.color:     #E2E5E7
-window.label.unfocus.colorTo:   #E2E5E7
+window.label.unfocus.color:     #E3DDD1
+window.label.unfocus.colorTo:   #E3DDD1
 window.label.unfocus.textColor: #121212
 
 window.button.focus:            flat gradient vertical
-window.button.focus.color:      #E2E5E7
-window.button.focus.colorTo:    #E2E5E7
-window.button.focus.picColor:   #121212
+window.button.focus.color:      #2B451E
+window.button.focus.colorTo:    #2B451E
+window.button.focus.picColor:   #D2D2D2
 
-window.button.pressed:          sunken bevel2
-window.button.pressed.color:   #E2E5E7
-window.button.pressed.colorTo: #E2E5E7
+window.button.pressed:          sunken bevel1
+window.button.pressed.color:    #C45F48
+window.button.pressed.colorTo:  #C45F48
 
 window.button.unfocus:          flat gradient vertical
-window.button.unfocus.color:    #E2E5E7
-window.button.unfocus.colorTo:  #E2E5E7
-window.button.unfocus.picColor: #121212
+window.button.unfocus.color:    #E3DDD1
+window.button.unfocus.colorTo:  #E3DDD1
+window.button.unfocus.picColor: #E3DDD1
 
 window.grip.focus:              flat
-window.grip.focus.color:        #362E69
-window.grip.focus.colorTo:      #362E69
+window.grip.focus.color:        #2B451E
+window.grip.focus.colorTo:      #2B451E
 
 window.grip.unfocus:            flat
-window.grip.unfocus.color:     #E2E5E7
-window.grip.unfocus.colorTo:   #E2E5E7
+window.grip.unfocus.color:     #222223
+window.grip.unfocus.colorTo:   #222223
 
 window.handle.focus:            flat
-window.handle.focus.color:     #E2E5E7
-window.handle.focus.colorTo:   #E2E5E7
+window.handle.focus.color:     #E3DDD1
+window.handle.focus.colorTo:   #E3DDD1
 
 window.handle.unfocus:          flat
-window.handle.unfocus.color:   #E2E5E7
-window.handle.unfocus.colorTo: #E2E5E7
+window.handle.unfocus.color:   #222223
+window.handle.unfocus.colorTo: #222223
 
 window.handleWidth:             4
 
 !MENU OPTIONS
 
 menu.itemHeight:                22
-menu.bevelWidth:                0
-menu.borderColor:               #121212
+menu.bevelWidth:                1
+menu.borderColor:               #2A2A2A
 menu.borderWidth:               1
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
-menu.frame:                     flat
-menu.frame.color:               #E2E5E7
-menu.frame.colorTo:             #E2E5E7
-menu.frame.disableColor:        #525252
+menu.frame:                     flat gradient diagonal
+menu.frame.color:               #E3DDD1
+menu.frame.colorTo:             #E3DDD1
+menu.frame.disableColor:        #626262
 menu.frame.textColor:           #121212
 
-menu.hilite:                    raised bevel2 gradient vertical
-menu.hilite.color:              #362E69
-menu.hilite.colorTo:            #362E69
+menu.hilite:                    flat gradient vertical
+menu.hilite.color:              #2B451E
+menu.hilite.colorTo:            #2B451E
 menu.hilite.justify:            left
-menu.hilite.textColor:          #E2E5E7
+menu.hilite.textColor:          #D2D2D2
 
-menu.title:                     flat
-menu.title.color:               #E2E5E7
-menu.title.colorTo:             #E2E5E7
-menu.title.textColor:           #121212
+menu.title:                     flat gradient vertical
+menu.title.color:               #2B451E
+menu.title.colorTo:             #2B451E
+menu.title.textColor:           #D2D2D2
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
