--- a/.fluxbox/styles/ceres/theme.cfg
+++ b/.fluxbox/styles/ceres/theme.cfg
@@ -16,7 +16,7 @@
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
 !FONT OPTIONS
-*.font:                          Calcutta-11:Regular
+*.font:                          Aller-10:regular
 !toolbar.workspace.font:          Roboto Mono-11:Regular
 !toolbar.clock.font:              Roboto Mono-11:Regular
 !window.font:                    Sans-11:Regular
@@ -35,60 +35,60 @@ toolbar:                        flat gradient vertical
 toolbar.height:                 24
 toolbar.shaped:                 false
 toolbar.bevelWidth:             1
-toolbar.borderColor:            #1C1F21
+toolbar.borderColor:            #151517
 toolbar.borderWidth:            1
-toolbar.color:                  #1C1F21
-toolbar.colorTo:                #1C1F21
+toolbar.color:                  #222429
+toolbar.colorTo:                #222429
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
-toolbar.clock.borderColor:      #1C1F21
+toolbar.clock.borderColor:      #151517
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #1C1F21
-toolbar.clock.colorTo:          #1C1F21
-toolbar.clock.textColor:        #89919A
+toolbar.clock.color:            #222429
+toolbar.clock.colorTo:          #222429
+toolbar.clock.textColor:        #BEBDB8
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
-toolbar.workspace.borderColor:  #1C1F21
+toolbar.workspace.borderColor:  #151517
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #1C1F21
-toolbar.workspace.colorTo:      #1C1F21
-toolbar.workspace.textColor:    #89919A
+toolbar.workspace.color:        #222429
+toolbar.workspace.colorTo:      #222429
+toolbar.workspace.textColor:    #BEBDB8
 
 toolbar.systray:    parentrelative
 toolbar.button:     parentrelative
-toolbar.button.PicColor:   #89919A
+toolbar.button.PicColor:   #BEBDB8
 toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.borderColor:    #2F373B
+toolbar.iconbar.borderColor:    #151517
 toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #1C1F21
-toolbar.iconbar.empty.colorTo:  #1C1F21
+toolbar.iconbar.empty.color:    #222429
+toolbar.iconbar.empty.colorTo:  #222429
 
 toolbar.iconbar.focused:              flat gradient vertical
 toolbar.iconbar.focused.justify:      Center
-toolbar.iconbar.focused.borderColor:  #2F373B
+toolbar.iconbar.focused.borderColor:  #151517
 toolbar.iconbar.focused.borderWidth:  1
-toolbar.iconbar.focused.color:        #1C1F21
-toolbar.iconbar.focused.colorTo:      #1C1F21
-toolbar.iconbar.focused.textColor:    #89919A
+toolbar.iconbar.focused.color:        #4D516D
+toolbar.iconbar.focused.colorTo:      #4D516D
+toolbar.iconbar.focused.textColor:    #BEBDB8
 
 toolbar.iconbar.unfocused:              flat gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.borderColor:  #2F373B
+toolbar.iconbar.unfocused.borderColor:  #151517
 toolbar.iconbar.unfocused.borderWidth:  1
-toolbar.iconbar.unfocused.color:       #1C1F21
-toolbar.iconbar.unfocused.colorTo:     #1C1F21
-toolbar.iconbar.unfocused.textColor:   #89919A
+toolbar.iconbar.unfocused.color:       #3E424B
+toolbar.iconbar.unfocused.colorTo:     #3E424B
+toolbar.iconbar.unfocused.textColor:   #BEBDB8
 
 !WINDOW OPTIONS
 
 window.title.height:            20
 window.justify:                 center
 window.bevelWidth:              0
-window.borderColor:             #1C1F21
+window.borderColor:             #151517
 window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
@@ -98,31 +98,31 @@ window.borderWidth:             1
 !window.label.active.textColor:  <color>
 
 window.title.focus:             flat gradient vertical
-window.title.focus.color:       #1C1F21
-window.title.focus.colorTo:     #1C1F21
+window.title.focus.color:       #222429
+window.title.focus.colorTo:     #222429
 
 window.title.unfocus:           flat gradient vertical
-window.title.unfocus.color:     #1C1F21
-window.title.unfocus.colorTo:   #1C1F21
+window.title.unfocus.color:     #222429
+window.title.unfocus.colorTo:   #222429
 
-window.label.focus:             flat gradient vertical
-window.label.focus.color:       #1F2326
-window.label.focus.colorTo:     #1F2326
-window.label.focus.textColor:   #FBFBFF
+window.label.focus:             flat gradient elliptic
+window.label.focus.color:       #4D516D
+window.label.focus.colorTo:     #4D516D
+window.label.focus.textColor:   #DEDDD9
 
 window.label.unfocus:           flat gradient vertical
-window.label.unfocus.color:     #1F2326
-window.label.unfocus.colorTo:   #1F2326
-window.label.unfocus.textColor: #89919A
+window.label.unfocus.color:     #222429
+window.label.unfocus.colorTo:   #222429
+window.label.unfocus.textColor: #BEBDB8
 
 window.button.focus:            flat gradient vertical
-window.button.focus.color:      #1F2326
-window.button.focus.colorTo:    #1F2326
-window.button.focus.picColor:   #89919A
+window.button.focus.color:      #222429
+window.button.focus.colorTo:    #222429
+window.button.focus.picColor:   #BEBDB8
 
 window.button.pressed:          sunken bevel2
-window.button.pressed.color:    #1F2326
-window.button.pressed.colorTo:  #1F2326
+window.button.pressed.color:    #3E424B
+window.button.pressed.colorTo:  #3E424B
 
 window.button.unfocus:          flat gradient vertical
 window.button.unfocus.color:    #1F2326
@@ -130,20 +130,20 @@ window.button.unfocus.colorTo:  #1F2326
 window.button.unfocus.picColor: #1F2326
 
 window.grip.focus:              flat
-window.grip.focus.color:        #2E3438
-window.grip.focus.colorTo:      #2E3438
+window.grip.focus.color:        #4D516D
+window.grip.focus.colorTo:      #4D516D
 
 window.grip.unfocus:            flat
-window.grip.unfocus.color:     #1C1F21
-window.grip.unfocus.colorTo:   #1C1F21
+window.grip.unfocus.color:     #222429
+window.grip.unfocus.colorTo:   #222429
 
 window.handle.focus:            flat
-window.handle.focus.color:     #1C1F21
-window.handle.focus.colorTo:   #1C1F21
+window.handle.focus.color:     #222429
+window.handle.focus.colorTo:   #222429
 
 window.handle.unfocus:          flat
-window.handle.unfocus.color:   #1C1F21
-window.handle.unfocus.colorTo: #1C1F21
+window.handle.unfocus.color:   #222429
+window.handle.unfocus.colorTo: #222429
 
 window.handleWidth:             4
 
@@ -151,28 +151,28 @@ window.handleWidth:             4
 
 menu.itemHeight:                22
 menu.bevelWidth:                1
-menu.borderColor:               #1F2326
+menu.borderColor:               #222429
 menu.borderWidth:               4
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
 menu.frame:                     flat gradient diagonal
-menu.frame.color:               #1F2326
-menu.frame.colorTo:             #1F2326
-menu.frame.disableColor:        #A9ACB2
-menu.frame.textColor:           #89919A
+menu.frame.color:               #222429
+menu.frame.colorTo:             #222429
+menu.frame.disableColor:        #88807B
+menu.frame.textColor:           #BEBDB8
 
 menu.hilite:                    flat gradient vertical
-menu.hilite.color:              #106DAA
-menu.hilite.colorTo:            #106DAA
+menu.hilite.color:              #4D516D
+menu.hilite.colorTo:            #4D516D
 menu.hilite.justify:            left
-menu.hilite.textColor:          #FBFBFF
+menu.hilite.textColor:          #DEDDD9
 
 menu.title:                     flat gradient vertical
-menu.title.color:               #1F2326
-menu.title.colorTo:             #1F2326
-menu.title.textColor:           #89919A
+menu.title.color:               #3E424B
+menu.title.colorTo:             #3E424B
+menu.title.textColor:           #BEBDB8
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
