--- a/.fluxbox/styles/crow/theme.cfg
+++ b/.fluxbox/styles/crow/theme.cfg
@@ -130,8 +130,8 @@ window.label.unfocus.textColor:		#E6E6E6
 !window.label.unfocus.pixmap:		unfcs.png
 
 window.button.focus:				raised gradient vertical
-window.button.focus.color:			#303030
-window.button.focus.colorTo:		#030303
+window.button.focus.color:			#444445
+window.button.focus.colorTo:		#090A0A
 window.button.focus.picColor:		#E6E6E6
 !window.button.focus.pixmap:		button.png
 window.button.pressed:				sunken bevel1
