--- a/.fluxbox/styles/dione/theme.cfg
+++ b/.fluxbox/styles/dione/theme.cfg
@@ -14,9 +14,9 @@
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
 !FONT OPTIONS
-*.font:                          Fira Sans-11:Retina
-toolbar.workspace.font:          Fira Code-11:Retina
-toolbar.clock.font:              Fira Code-11:Retina
+*.font:                          SF Pro Text-11:Regular
+toolbar.workspace.font:          SF Mono-11:Regular
+toolbar.clock.font:              SF Mono-11:Regular
 !window.font:                    Sans-11:Regular
 !menu.frame.font:                Sans-11:Regular
 !menu.hilite.font:                Amiko-11:semibold
@@ -30,63 +30,63 @@ toolbar.clock.font:              Fira Code-11:Retina
 !TOOLBAR OPTIONS
 
 toolbar:                        flat gradient vertical
-toolbar.height:                 26
+toolbar.height:                 24
 toolbar.shaped:                 false
 toolbar.bevelWidth:             1
-toolbar.borderColor:            #232323
+toolbar.borderColor:            #0F0F0F
 toolbar.borderWidth:            1
-toolbar.color:                  #1E2325
-toolbar.colorTo:                #1E2325
+toolbar.color:                  #141413
+toolbar.colorTo:                #141413
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
-toolbar.clock.borderColor:      #232323
+toolbar.clock.borderColor:      #0F0F0F
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #1E2325
-toolbar.clock.colorTo:          #1E2325
-toolbar.clock.textColor:        #DDDDDD
+toolbar.clock.color:            #141413
+toolbar.clock.colorTo:          #141413
+toolbar.clock.textColor:        #D4D4D2
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
-toolbar.workspace.borderColor: #1E2325
+toolbar.workspace.borderColor: #0F0F0F
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #1E2325
-toolbar.workspace.colorTo:      #1E2325
-toolbar.workspace.textColor:    #DDDDDD
+toolbar.workspace.color:        #141413
+toolbar.workspace.colorTo:      #141413
+toolbar.workspace.textColor:    #D4D4D2
 
 toolbar.systray:    parentrelative
 toolbar.button:     parentrelative
-toolbar.button.PicColor:   #DDDDDD
+toolbar.button.PicColor:   #D4D4D2
 toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.borderColor:    #2F373B
+toolbar.iconbar.borderColor:    #0F0F0F
 toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #1E2325
-toolbar.iconbar.empty.colorTo:  #1E2325
+toolbar.iconbar.empty.color:    #242321
+toolbar.iconbar.empty.colorTo:  #242321
 
 toolbar.iconbar.focused:              flat gradient vertical
 toolbar.iconbar.focused.justify:      Center
-toolbar.iconbar.focused.borderColor:  #2F373B
+toolbar.iconbar.focused.borderColor:  #0F0F0F
 toolbar.iconbar.focused.borderWidth:  1
-toolbar.iconbar.focused.color:        #1E2325
-toolbar.iconbar.focused.colorTo:      #1E2325
-toolbar.iconbar.focused.textColor:    #DDDDDD
+toolbar.iconbar.focused.color:        #242321
+toolbar.iconbar.focused.colorTo:      #242321
+toolbar.iconbar.focused.textColor:    #D4D4D2
 
 toolbar.iconbar.unfocused:              flat gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.borderColor:  #2F373B
+toolbar.iconbar.unfocused.borderColor:  #0F0F0F
 toolbar.iconbar.unfocused.borderWidth:  1
-toolbar.iconbar.unfocused.color:       #1E2325
-toolbar.iconbar.unfocused.colorTo:     #1E2325
-toolbar.iconbar.unfocused.textColor:    #DDDDDD
+toolbar.iconbar.unfocused.color:       #242321
+toolbar.iconbar.unfocused.colorTo:     #242321
+toolbar.iconbar.unfocused.textColor:    #D4D4D2
 
 !WINDOW OPTIONS
 
 window.title.height:            20
 window.justify:                 Center
 window.bevelWidth:              0
-window.borderColor:             #232323
+window.borderColor:             #141413
 window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
@@ -103,73 +103,73 @@ window.title.unfocus:           flat gradient vertical
 window.title.unfocus.color:     #292929
 window.title.unfocus.colorTo:   #292929
 
-window.label.focus:             raised gradient vertical
-window.label.focus.color:       #99853D
-window.label.focus.colorTo:     #99853D
+window.label.focus:             raised gradient horizontal
+window.label.focus.color:       #917721
+window.label.focus.colorTo:     #917721
 window.label.focus.textColor:   #FBFBFF
 
 window.label.unfocus:           raised gradient vertical
-window.label.unfocus.color:     #1E2325
-window.label.unfocus.colorTo:   #1E2325
-window.label.unfocus.textColor: #DDDDDD
+window.label.unfocus.color:     #242321
+window.label.unfocus.colorTo:   #242321
+window.label.unfocus.textColor: #D4D4D2
 
 window.button.focus:            raised gradient vertical
-window.button.focus.color:      #1E2325
-window.button.focus.colorTo:    #1E2325
-window.button.focus.picColor:   #DDDDDD
+window.button.focus.color:      #242321
+window.button.focus.colorTo:    #242321
+window.button.focus.picColor:   #D4D4D2
 
 window.button.pressed:          sunken bevel2
-window.button.pressed.color:   #1E2325
-window.button.pressed.colorTo: #1E2325
+window.button.pressed.color:   #242321
+window.button.pressed.colorTo: #242321
 
 window.button.unfocus:          raised gradient vertical
-window.button.unfocus.color:    #1E2325
-window.button.unfocus.colorTo:  #1E2325
-window.button.unfocus.picColor: #DDDDDD
+window.button.unfocus.color:    #242321
+window.button.unfocus.colorTo:  #242321
+window.button.unfocus.picColor: #D4D4D2
 
 window.grip.focus:              flat
 window.grip.focus.color:        #615A43
 window.grip.focus.colorTo:      #615A43
 
 window.grip.unfocus:            flat
-window.grip.unfocus.color:     #1E2325
-window.grip.unfocus.colorTo:   #1E2325
+window.grip.unfocus.color:     #242321
+window.grip.unfocus.colorTo:   #242321
 
 window.handle.focus:            flat
-window.handle.focus.color:     #1E2325
-window.handle.focus.colorTo:   #1E2325
+window.handle.focus.color:     #242321
+window.handle.focus.colorTo:   #242321
 
 window.handle.unfocus:          flat
-window.handle.unfocus.color:   #1E2325
-window.handle.unfocus.colorTo: #1E2325
+window.handle.unfocus.color:   #242321
+window.handle.unfocus.colorTo: #242321
 
 window.handleWidth:             4
 
 !MENU OPTIONS
 
 menu.itemHeight:                22
-menu.bevelWidth:                2
-menu.borderColor:               #232323
-menu.borderWidth:               1
+menu.bevelWidth:                0
+menu.borderColor:               #141413
+menu.borderWidth:               6
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
-menu.frame:                     raised gradient diagonal
-menu.frame.color:               #1E2325
-menu.frame.colorTo:             #1E2325
+menu.frame:                     flat gradient diagonal
+menu.frame.color:               #141413
+menu.frame.colorTo:             #141413
 menu.frame.disableColor:        #615A43
-menu.frame.textColor:           #DDDDDD
+menu.frame.textColor:           #D4D4D2
 
-menu.hilite:                    raised gradient vertical
-menu.hilite.color:              #99853D
-menu.hilite.colorTo:            #99853D
+menu.hilite:                    flat gradient vertical
+menu.hilite.color:              #917721
+menu.hilite.colorTo:            #917721
 menu.hilite.justify:            left
 menu.hilite.textColor:          #FBFBFF
 
-menu.title:                     raised gradient vertical
-menu.title.color:               #99853D
-menu.title.colorTo:             #99853D
+menu.title:                     flat gradient vertical
+menu.title.color:               #917721
+menu.title.colorTo:             #917721
 menu.title.textColor:           #FBFBFF
 menu.title.justify:             Center
 menu.titleHeight:               20
@@ -178,10 +178,10 @@ menu.titleHeight:               20
 !SLIT
 slit:             flat
 slit.bevelWidth:  0
-slit.borderColor: #000000
+slit.borderColor: #141413
 slit.borderWidth: 0
-slit.color:       #000000
-slit.colorTo:     #000000
+slit.color:       #141413
+slit.colorTo:     #141413
 
 !BACKGROUND
 
