--- a/.fluxbox/styles/eris/theme.cfg
+++ b/.fluxbox/styles/eris/theme.cfg
@@ -1,7 +1,7 @@
 !
-! fluxbox style - Eris
+! fluxbox style - eris
 ! created by PackRat
-! creation date - 10-11-2018
+! creation date - 06-03-2019
 !
 ! This program is free software: you can redistribute it and/or modify
 ! it under the terms of the GNU General Public License as published by
@@ -14,15 +14,15 @@
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
 !FONT OPTIONS
-*.font:                          Fantasque Sans Mono-11:Regular
-!toolbar.workspace.font:          Fira Code-11:Retina
-!toolbar.clock.font:              Fira Code-11:Retina
+*.font:                          Noto Sans-11:Regular
+toolbar.workspace.font:          Noto Mono-11:Regular
+toolbar.clock.font:              Noto Mono-11:Regular
 !window.font:                    Sans-11:Regular
 !menu.frame.font:                Sans-11:Regular
-!menu.hilite.font:                Amiko-11:semibold
-!menu.title.font:                Amiko-11:semibold
-!toolbar.iconbar.focused.font:    Amiko-11:semibold
-!toolbar.iconbar.unfocused.font: Sans-11:Regular
+!menu.hilite.font:               IBM Plex Sans-10:Medium
+!menu.title.font:                Sans-11:Regular
+!toolbar.iconbar.focused.font:    Fira Sans-10:Regular
+!toolbar.iconbar.unfocused.font:  Fira Sans-10:Light
 
 !menu.title.effect: shadow
 !menu.title.shadow.color: red
@@ -30,63 +30,63 @@
 !TOOLBAR OPTIONS
 
 toolbar:                        flat gradient vertical
-toolbar.height:                 26
+toolbar.height:                 24
 toolbar.shaped:                 false
-toolbar.bevelWidth:             1
-toolbar.borderColor:            #232323
+toolbar.bevelWidth:             2
+toolbar.borderColor:            #1F1F1F
 toolbar.borderWidth:            1
-toolbar.color:                  #1E2325
-toolbar.colorTo:                #171A1C
+toolbar.color:                  #282521
+toolbar.colorTo:                #282521
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
-toolbar.clock.borderColor:      #232323
+toolbar.clock.borderColor:      #1F1F1F
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #1E2325
-toolbar.clock.colorTo:          #171A1C
-toolbar.clock.textColor:        #D5D5D5
+toolbar.clock.color:            #282521
+toolbar.clock.colorTo:          #282521
+toolbar.clock.textColor:        #DADBDE
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
-toolbar.workspace.borderColor:  #171A1C
+toolbar.workspace.borderColor:  #1F1F1F
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #1E2325
-toolbar.workspace.colorTo:      #171A1C
-toolbar.workspace.textColor:    #D5D5D5
+toolbar.workspace.color:        #282521
+toolbar.workspace.colorTo:      #282521
+toolbar.workspace.textColor:    #DADBDE
 
 toolbar.systray:    parentrelative
 toolbar.button:     parentrelative
-toolbar.button.PicColor:   #D5D5D5
+toolbar.button.PicColor:   #DADBDE
 toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.borderColor:    #212B30
+toolbar.iconbar.borderColor:    #282521
 toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #1E2325
-toolbar.iconbar.empty.colorTo:  #171A1C
+toolbar.iconbar.empty.color:    #282521
+toolbar.iconbar.empty.colorTo:  #282521
 
-toolbar.iconbar.focused:              flat gradient vertical
+toolbar.iconbar.focused:              raised gradient vertical
 toolbar.iconbar.focused.justify:      Center
-toolbar.iconbar.focused.borderColor:  #212B30
-toolbar.iconbar.focused.borderWidth:  1
-toolbar.iconbar.focused.color:        #56694D
-toolbar.iconbar.focused.colorTo:      #3D4A36
-toolbar.iconbar.focused.textColor:    #D5D5D5
+toolbar.iconbar.focused.borderColor:  #282521
+toolbar.iconbar.focused.borderWidth:  3
+toolbar.iconbar.focused.color:        #53514D
+toolbar.iconbar.focused.colorTo:      #53514D
+toolbar.iconbar.focused.textColor:    #DADBDE
 
-toolbar.iconbar.unfocused:              flat gradient vertical
+toolbar.iconbar.unfocused:              raised gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.borderColor:  #212B30
-toolbar.iconbar.unfocused.borderWidth:  1
-toolbar.iconbar.unfocused.color:        #1E2325
-toolbar.iconbar.unfocused.colorTo:      #171A1C
-toolbar.iconbar.unfocused.textColor:    #D5D5D5
+toolbar.iconbar.unfocused.borderColor:  #282521
+toolbar.iconbar.unfocused.borderWidth:  3
+toolbar.iconbar.unfocused.color:        #333332
+toolbar.iconbar.unfocused.colorTo:      #333332
+toolbar.iconbar.unfocused.textColor:    #DADBDE
 
 !WINDOW OPTIONS
 
 window.title.height:            20
-window.justify:                 Center
+window.justify:                 center
 window.bevelWidth:              0
-window.borderColor:             #232323
+window.borderColor:             #1F1F1F
 window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
@@ -96,136 +96,120 @@ window.borderWidth:             1
 !window.label.active.textColor:  <color>
 
 window.title.focus:             flat gradient vertical
-window.title.focus.color:       #292929
-window.title.focus.colorTo:     #292929
+window.title.focus.color:       #282521
+window.title.focus.colorTo:     #282521
 
 window.title.unfocus:           flat gradient vertical
-window.title.unfocus.color:     #292929
-window.title.unfocus.colorTo:   #292929
+window.title.unfocus.color:     #282521
+window.title.unfocus.colorTo:   #282521
 
-window.label.focus:             raised gradient diagonal
-window.label.focus.color:       #56694D
-window.label.focus.colorTo:     #3D4A36
-window.label.focus.textColor:   #D5D5D5
+window.label.focus:             flat gradient horizontal
+window.label.focus.color:       #793802
+window.label.focus.colorTo:     #793802
+window.label.focus.textColor:   #DADBDE
 
-window.label.unfocus:           raised gradient vertical
-window.label.unfocus.color:     #1E2325
-window.label.unfocus.colorTo:   #171A1C
-window.label.unfocus.textColor: #D5D5D5
+window.label.unfocus:           flat gradient vertical
+window.label.unfocus.color:     #333332
+window.label.unfocus.colorTo:   #333332
+window.label.unfocus.textColor: #999999
 
-window.button.focus:            raised gradient vertical
-window.button.focus.color:      #1E2325
-window.button.focus.colorTo:    #171A1C
-window.button.focus.picColor:   #D5D5D5
+window.button.focus:            flat gradient vertical
+window.button.focus.color:      #282521
+window.button.focus.colorTo:    #282521
+window.button.focus.picColor:   #DADBDE
 
-window.button.pressed:          sunken bevel2
-window.button.pressed.color:    #171A1C
-window.button.pressed.colorTo:  #171A1C
+window.button.pressed:          sunken
+window.button.pressed.color:    #444F55
+window.button.pressed.colorTo:  #444F55
 
-window.button.unfocus:          raised gradient vertical
-window.button.unfocus.color:    #1E2325
-window.button.unfocus.colorTo:  #171A1C
-window.button.unfocus.picColor: #D5D5D5
+window.button.unfocus:          flat gradient vertical
+window.button.unfocus.color:    #333332
+window.button.unfocus.colorTo:  #333332
+window.button.unfocus.picColor: #999999
 
-window.grip.focus:              flat
-window.grip.focus.color:        #56694D
-window.grip.focus.colorTo:      #56694D
+window.grip.focus:              flat gradient vertical
+window.grip.focus.color:        #793802
+window.grip.focus.colorTo:      #793802
 
-window.grip.unfocus:            flat
-window.grip.unfocus.color:      #171A1C
-window.grip.unfocus.colorTo:    #171A1C
+window.grip.unfocus:            flat gradient vertical
+window.grip.unfocus.color:      #1F1F1F
+window.grip.unfocus.colorTo:    #1F1F1F
 
-window.handle.focus:            flat
-window.handle.focus.color:      #171A1C
-window.handle.focus.colorTo:    #171A1C
+window.handle.focus:            flat gradient vertical
+window.handle.focus.color:      #1F1F1F
+window.handle.focus.colorTo:    #1F1F1F
 
-window.handle.unfocus:          flat
-window.handle.unfocus.color:    #171A1C
-window.handle.unfocus.colorTo:  #171A1C
+window.handle.unfocus:          flat gradient vertical
+window.handle.unfocus.color:    #1F1F1F
+window.handle.unfocus.colorTo:  #1F1F1F
 
 window.handleWidth:             4
 
 !MENU OPTIONS
 
 menu.itemHeight:                22
-menu.bevelWidth:                2
-menu.borderColor:               #232323
+menu.bevelWidth:                1
+menu.borderColor:               #1F1F1F
 menu.borderWidth:               1
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
-menu.frame:                     raised gradient diagonal
-menu.frame.color:               #1E2325
-menu.frame.colorTo:             #171A1C
-menu.frame.disableColor:        #6A6F7D
-menu.frame.textColor:           #D5D5D5
+menu.frame:                     flat gradient diagonal
+menu.frame.color:               #282521
+menu.frame.colorTo:             #282521
+menu.frame.disableColor:        #B2AC9F
+menu.frame.textColor:           #DADBDE
 
-menu.hilite:                    raised gradient vertical
-menu.hilite.color:              #56694D
-menu.hilite.colorTo:            #3D4A36
+menu.hilite:                    flat gradient vertical
+menu.hilite.color:              #53514D
+menu.hilite.colorTo:            #53514D
 menu.hilite.justify:            left
-menu.hilite.textColor:          #D5D5D5
+menu.hilite.textColor:          #DADBDE
 
-menu.title:                     raised gradient vertical
-menu.title.color:               #56694D
-menu.title.colorTo:             #3D4A36
-menu.title.textColor:           #D5D5D5
+menu.title:                     flat gradient vertical
+menu.title.color:               #333332
+menu.title.colorTo:             #333332
+menu.title.textColor:           #DADBDE
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
 
-!SLIT
-slit:             flat
-slit.bevelWidth:  0
-slit.borderColor: #000000
-slit.borderWidth: 0
-slit.color:       #000000
-slit.colorTo:     #000000
-
-!BACKGROUND
-
-!background: centered|aspect|tiled|fullscreen|random|solid|gradient <texture>|mod|none|unset
-!background.pixmap: <file or directory>
-!background.color: <color>
-!background.colorTo: <color>
-!background.modX: <integer>
-!background.modY: <integer>
-
 ! PIXMAP OPTIONS
 
-!toolbar.pixmap:                 bar02.png
-!toolbar.workspace.pixmap:       bar02.png
-!toolbar.clock.pixmap:           bar02.png
-!toolbar.iconbar.focused.pixmap: focus.png
-!toolbar.iconbar.unfocused.pixmap: bar02.png
-!toolbar.iconbar.empty.pixmap:   bar02.png
+!toolbar.pixmap:                 <filename>
+!toolbar.workspace.pixmap:       <filename>
+!toolbar.clock.pixmap:           <filename>
+!toolbar.iconbar.focused.pixmap: <filename>
+!toolbar.iconbar.unfocused.pixmap: <filename>
+!toolbar.iconbar.empty.pixmap:   <filename>
 
 !window.title.focus.pixmap:      <filename>
 !window.title.unfocus.pixmap:    <filename>
 
-!window.label.focus.pixmap:      focus.png
-!window.label.unfocus.pixmap:    bar02.png
+!window.label.focus.pixmap:      <filename>
+!window.label.unfocus.pixmap:    <filename>
 
-!window.button.focus.pixmap:     <filename>
-!window.button.pressed.pixmap:   <filename>
-!window.button.unfocus.pixmap:   <filename>
+!window.button.focus.pixmap:     void.png
+!window.button.pressed.pixmap:   void.png
+!window.button.unfocus.pixmap:   void.png
 
 !window.grip.focus.pixmap:       <filename>
 !window.grip.unfocus.pixmap:     <filename>
 !window.handle.focus.pixmap:     <filename>
 !window.handle.unfocus.pixmap:   <filename>
 
-!window.close.pixmap:            close.png
-!window.close.pressed.pixmap:    pressed.png
-!window.close.unfocus.pixmap:   inactive.png
+!window.close.pixmap:            close_test.png
+!window.close.pressed.pixmap:    pclose_test.png
+!window.close.unfocus.pixmap:    void-unfocus.png
 
-!window.maximize.pixmap:         max.png
-!window.maximize.pressed.pixmap: pressed.png
-!window.maximize.unfocus.pixmap: inactive.png
 
-!window.iconify.pixmap:           iconify.png
-!window.iconify.pressed.pixmap:  pressed.png
+!window.maximize.pixmap:         void.png
+!window.maximize.pressed.pixmap: void-pressed.png
+!window.maximize.unfocus.pixmap: void.png
+
+!window.iconify.pixmap:           void.png
+!window.iconify.pressed.pixmap:   void-pressed.png
 !window.iconify.unfocus.pixmap:  inactive.png
 
 !window.shade.pixmap:            shade.png
@@ -252,6 +236,23 @@ slit.colorTo:     #000000
 !menu.unselected.pixmap:         <filename>
 
 !slit.pixmap:                    <filename>
+
+!SLIT
+slit:             flat gradient vertical
+slit.bevelWidth:  0
+slit.borderColor: #000000
+slit.borderWidth: 0
+slit.color:       #000000
+slit.colorTo:     #000000
+
+!BACKGROUND
+
+!background: centered|aspect|tiled|fullscreen|random|solid|gradient <texture>|mod|none|unset
+!background.pixmap: <file or directory>
+!background.color: <color>
+!background.colorTo: <color>
+!background.modX: <integer>
+!background.modY: <integer>
 
 !
 !fluxbox-style.txt              08 February 2015               FLUXBOX-STYLE(5)
