--- a/.fluxbox/styles/jupiter/theme.cfg
+++ b/.fluxbox/styles/jupiter/theme.cfg
@@ -104,9 +104,9 @@ window.title.unfocus.color:     #CDCDC5
 window.title.unfocus.colorTo:   #CDCDC5
 
 window.label.focus:             flat gradient horizontal
-window.label.focus.color:       #5E697F
-window.label.focus.colorTo:     #5E697F
-window.label.focus.textColor:   #FCFCFF
+window.label.focus.color:       #4A4B9A
+window.label.focus.colorTo:     #4A4B9A
+window.label.focus.textColor:   #ECECEE
 
 window.label.unfocus:           flat gradient vertical
 window.label.unfocus.color:     #CDCDC5
@@ -162,15 +162,15 @@ menu.frame.disableColor:        #993D3D
 menu.frame.textColor:           #111111
 
 menu.hilite:                    flat gradient vertical
-menu.hilite.color:              #CDCDC5
-menu.hilite.colorTo:            #CDCDC5
+menu.hilite.color:              #4A4B9A
+menu.hilite.colorTo:            #4A4B9A
 menu.hilite.justify:            left
-menu.hilite.textColor:          #912121
+menu.hilite.textColor:          #ECECEE
 
 menu.title:                     flat
-menu.title.color:               #7F7F85
-menu.title.colorTo:             #7F7F85
-menu.title.textColor:           #FCFCFF
+menu.title.color:               #4A4B9A
+menu.title.colorTo:             #4A4B9A
+menu.title.textColor:           #ECECEE
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
