--- a/.fluxbox/styles/pluto/theme.cfg
+++ b/.fluxbox/styles/pluto/theme.cfg
@@ -1,5 +1,5 @@
 !
-! fluxbox style - 
+! fluxbox style - pluto
 ! created by PackRat
 ! creation date - 07-19-2018
 !
@@ -14,9 +14,9 @@
 ! GNU General Public License for more details see <http://www.gnu.org/licenses/>.
 
 !FONT OPTIONS
-*.font:                          Oxygen-11:Regular
-toolbar.workspace.font:          Oxygen Mono-11:Regular
-toolbar.clock.font:              Oxygen Mono-11:Regular
+*.font:                          Noto Sans-11:Regular
+toolbar.workspace.font:          Noto Mono-11:Regular
+toolbar.clock.font:              Noto Mono-11:Regular
 !window.font:                    Sans-11:Regular
 !menu.frame.font:                Sans-11:Regular
 !menu.hilite.font:                IBM Plex Sans-10:Regular
@@ -33,60 +33,60 @@ toolbar:                        flat gradient vertical
 toolbar.height:                 26
 toolbar.shaped:                 false
 toolbar.bevelWidth:             1
-toolbar.borderColor:            #232323
+toolbar.borderColor:            #131313
 toolbar.borderWidth:            1
-toolbar.color:                  #DFDFDF
-toolbar.colorTo:                #BFBFBF
+toolbar.color:                  #171717
+toolbar.colorTo:                #171717
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
-toolbar.clock.borderColor:      #232323
+toolbar.clock.borderColor:      #131313
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #DFDFDF
-toolbar.clock.colorTo:          #BFBFBF
-toolbar.clock.textColor:        #232323
+toolbar.clock.color:            #171717
+toolbar.clock.colorTo:          #171717
+toolbar.clock.textColor:        #DDDDDD
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
-toolbar.workspace.borderColor:  #BFBFBF
+toolbar.workspace.borderColor:  #171717
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #DFDFDF
-toolbar.workspace.colorTo:      #BFBFBF
-toolbar.workspace.textColor:    #232323
+toolbar.workspace.color:        #171717
+toolbar.workspace.colorTo:      #171717
+toolbar.workspace.textColor:    #DDDDDD
 
 toolbar.systray:    parentrelative
 toolbar.button:     parentrelative
-toolbar.button.PicColor:   #232323
-toolbar.button.scale:      0.50
+toolbar.button.PicColor:   #666666
+toolbar.button.scale:      0.1
 
 toolbar.iconbar.empty:          flat gradient vertical
-toolbar.iconbar.borderColor:    #7F7F7F
+toolbar.iconbar.borderColor:    #131313
 toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #DFDFDF
-toolbar.iconbar.empty.colorTo:  #BFBFBF
+toolbar.iconbar.empty.color:    #171717
+toolbar.iconbar.empty.colorTo:  #171717
 
 toolbar.iconbar.focused:              raised gradient vertical
 toolbar.iconbar.focused.justify:      Center
-toolbar.iconbar.focused.borderColor:  #7F7F7F
+toolbar.iconbar.focused.borderColor:  #131313
 toolbar.iconbar.focused.borderWidth:  1
-toolbar.iconbar.focused.color:        #DFDFDF
-toolbar.iconbar.focused.colorTo:      #BFBFBF
-toolbar.iconbar.focused.textColor:    #232323
+toolbar.iconbar.focused.color:        #282828
+toolbar.iconbar.focused.colorTo:      #282828
+toolbar.iconbar.focused.textColor:    #DDDDDD
 
 toolbar.iconbar.unfocused:              raised gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
-toolbar.iconbar.unfocused.borderColor:  #7F7F7F
+toolbar.iconbar.unfocused.borderColor:  #131313
 toolbar.iconbar.unfocused.borderWidth:  1
-toolbar.iconbar.unfocused.color:        #DFDFDF
-toolbar.iconbar.unfocused.colorTo:      #BFBFBF
-toolbar.iconbar.unfocused.textColor:    #232323
+toolbar.iconbar.unfocused.color:        #202020
+toolbar.iconbar.unfocused.colorTo:      #202020
+toolbar.iconbar.unfocused.textColor:    #DDDDDD
 
 !WINDOW OPTIONS
 
 window.title.height:            20
-window.justify:                 left
+window.justify:                 center
 window.bevelWidth:              0
-window.borderColor:             #232323
+window.borderColor:             #131313
 window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
@@ -96,81 +96,81 @@ window.borderWidth:             1
 !window.label.active.textColor:  <color>
 
 window.title.focus:             flat gradient vertical
-window.title.focus.color:       #BFBFBF
-window.title.focus.colorTo:     #BFBFBF
+window.title.focus.color:       #171717
+window.title.focus.colorTo:     #171717
 
 window.title.unfocus:           flat gradient vertical
-window.title.unfocus.color:     #BFBFBF
-window.title.unfocus.colorTo:   #BFBFBF
+window.title.unfocus.color:     #171717
+window.title.unfocus.colorTo:   #171717
 
 window.label.focus:             raised gradient crossdiagonal 
-window.label.focus.color:       #3B6CAA
-window.label.focus.colorTo:     #162025
-window.label.focus.textColor:   #DFDFDF
+window.label.focus.color:       #3C5D7E
+window.label.focus.colorTo:     #3C5D7E
+window.label.focus.textColor:   #DDDDDD
 
 window.label.unfocus:           raised gradient vertical
-window.label.unfocus.color:     #DFDFDF
-window.label.unfocus.colorTo:   #BFBFBF
-window.label.unfocus.textColor: #232323
+window.label.unfocus.color:     #283240
+window.label.unfocus.colorTo:   #283240
+window.label.unfocus.textColor: #DDDDDD
 
 window.button.focus:            raised gradient vertical
-window.button.focus.color:      #DFDFDF
-window.button.focus.colorTo:    #BFBFBF
-window.button.focus.picColor:   #232323
+window.button.focus.color:      #283240
+window.button.focus.colorTo:    #283240
+window.button.focus.picColor:   #DDDDDD
 
 window.button.pressed:          sunken bevel2
-window.button.pressed.color:    #BFBFBF
-window.button.pressed.colorTo:  #BFBFBF
+window.button.pressed.color:    #3F4857
+window.button.pressed.colorTo:  #3F4857
 
 window.button.unfocus:          raised gradient vertical
-window.button.unfocus.color:    #DFDFDF
-window.button.unfocus.colorTo:  #BFBFBF
-window.button.unfocus.picColor: #232323
+window.button.unfocus.color:    #283240
+window.button.unfocus.colorTo:  #283240
+window.button.unfocus.picColor: #DDDDDD
 
 window.grip.focus:              flat
-window.grip.focus.color:        #56694D
-window.grip.focus.colorTo:      #56694D
+window.grip.focus.color:        #3C5D7E
+window.grip.focus.colorTo:      #3C5D7E
 
 window.grip.unfocus:            flat
-window.grip.unfocus.color:      #BFBFBF
-window.grip.unfocus.colorTo:    #BFBFBF
+window.grip.unfocus.color:      #131313
+window.grip.unfocus.colorTo:    #131313
 
 window.handle.focus:            flat
-window.handle.focus.color:      #BFBFBF
-window.handle.focus.colorTo:    #BFBFBF
+window.handle.focus.color:      #131313
+window.handle.focus.colorTo:    #131313
 
 window.handle.unfocus:          flat
-window.handle.unfocus.color:    #BFBFBF
-window.handle.unfocus.colorTo:  #BFBFBF
+window.handle.unfocus.color:    #131313
+window.handle.unfocus.colorTo:  #131313
 
-window.handleWidth:             4
+window.handleWidth:             2
 
 !MENU OPTIONS
 
 menu.itemHeight:                22
 menu.bevelWidth:                2
-menu.borderColor:               #232323
+menu.borderColor:               #131313
 menu.borderWidth:               1
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
 menu.frame:                     raised gradient diagonal
-menu.frame.color:               #DFDFDF
-menu.frame.colorTo:             #BFBFBF
+menu.frame.color:               #171717
+menu.frame.colorTo:             #171717
 menu.frame.disableColor:        #56694D
-menu.frame.textColor:           #232323
+menu.frame.textColor:           #DDDDDD
 
 menu.hilite:                    raised gradient vertical
-menu.hilite.color:              #3B6CAA
-menu.hilite.colorTo:            #335580
+menu.hilite.color:              #283240
+menu.hilite.colorTo:            #283240
 menu.hilite.justify:            left
-menu.hilite.textColor:          #DFDFDF
+menu.hilite.textColor:          #DDDDDD
 
 menu.title:                     flat gradient vertical
-menu.title.color:               #3B6CAA
-menu.title.colorTo:             #335580
-menu.title.textColor:           #DFDFDF
+menu.title.color:               #283240
+menu.title.colorTo:             #283240
+menu.title.textColor:           #DDDDDD
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
