--- a/.fluxbox/styles/saturn/theme.cfg
+++ b/.fluxbox/styles/saturn/theme.cfg
@@ -104,9 +104,9 @@ window.title.unfocus.color:     #161517
 window.title.unfocus.colorTo:   #161517
 
 window.label.focus:             flat gradient horizontal
-window.label.focus.color:       #AB1308
-window.label.focus.colorTo:     #E9AC1F
-window.label.focus.textColor:   #F8F8F8
+window.label.focus.color:       #722222
+window.label.focus.colorTo:     #CD8500
+window.label.focus.textColor:   #E3E2E1
 
 window.label.unfocus:           flat gradient vertical
 window.label.unfocus.color:     #161517
@@ -128,8 +128,8 @@ window.button.unfocus.colorTo:  #161517
 window.button.unfocus.picColor: #9F9F9F
 
 window.grip.focus:              flat
-window.grip.focus.color:        #666051
-window.grip.focus.colorTo:      #666051
+window.grip.focus.color:        #A55555
+window.grip.focus.colorTo:      #A55555
 
 window.grip.unfocus:            flat
 window.grip.unfocus.color:      #323034
@@ -158,19 +158,19 @@ menu.bullet.position:           Right
 menu.frame:                     flat gradient diagonal
 menu.frame.color:               #161517
 menu.frame.colorTo:             #161517
-menu.frame.disableColor:        #99907A
+menu.frame.disableColor:        #5A352F
 menu.frame.textColor:           #CFCFCF
 
 menu.hilite:                    flat gradient vertical
 menu.hilite.color:              #323034
 menu.hilite.colorTo:            #323034
 menu.hilite.justify:            left
-menu.hilite.textColor:          #F8F8F8
+menu.hilite.textColor:          #E3E2E1
 
 menu.title:                     flat
-menu.title.color:               #323034
-menu.title.colorTo:             #323034
-menu.title.textColor:           #F8F8F8
+menu.title.color:               #833333
+menu.title.colorTo:             #833333
+menu.title.textColor:           #E3E2E1
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
