--- a/.fluxbox/styles/venus/theme.cfg
+++ b/.fluxbox/styles/venus/theme.cfg
@@ -35,58 +35,58 @@ toolbar.shaped:                 false
 toolbar.bevelWidth:             1
 toolbar.borderColor:            #353535
 toolbar.borderWidth:            1
-toolbar.color:                  #F1F2F0
-toolbar.colorTo:                #F1F2F0
+toolbar.color:                  #202121
+toolbar.colorTo:                #202121
 
 toolbar.clock:                  flat gradient vertical
 toolbar.clock.justify:          Center
 toolbar.clock.borderColor:      #353535
 toolbar.clock.borderWidth:      0
-toolbar.clock.color:            #F1F2F0
-toolbar.clock.colorTo:          #F1F2F0
-toolbar.clock.textColor:        #101010
+toolbar.clock.color:            #202121
+toolbar.clock.colorTo:          #202121
+toolbar.clock.textColor:        #D5D7D7
 
 toolbar.workspace:              flat gradient vertical
 toolbar.workspace.justify:      Center
 toolbar.workspace.borderColor:  #353535
 toolbar.workspace.borderWidth:  0
-toolbar.workspace.color:        #F1F2F0
-toolbar.workspace.colorTo:      #F1F2F0
-toolbar.workspace.textColor:    #101010
+toolbar.workspace.color:        #202121
+toolbar.workspace.colorTo:      #202121
+toolbar.workspace.textColor:    #D5D7D7
 
 toolbar.systray:    parentrelative
 toolbar.button:     parentrelative
-toolbar.button.PicColor:   #353535
+toolbar.button.PicColor:   #A2A3A3
 toolbar.button.scale:      0.50
 
 toolbar.iconbar.empty:          flat gradient vertical
 toolbar.iconbar.borderColor:    #353535
 toolbar.iconbar.borderWidth:    1
-toolbar.iconbar.empty.color:    #F1F2F0
-toolbar.iconbar.empty.colorTo:  #F1F2F0
+toolbar.iconbar.empty.color:    #202121
+toolbar.iconbar.empty.colorTo:  #202121
 
 toolbar.iconbar.focused:              flat gradient vertical
 toolbar.iconbar.focused.justify:      Center
 toolbar.iconbar.focused.borderColor:  #353535
 toolbar.iconbar.focused.borderWidth:  1
-toolbar.iconbar.focused.color:        #F1F2F0
-toolbar.iconbar.focused.colorTo:      #F1F2F0
-toolbar.iconbar.focused.textColor:    #101010
+toolbar.iconbar.focused.color:        #3D4040
+toolbar.iconbar.focused.colorTo:      #3D4040
+toolbar.iconbar.focused.textColor:    #D5D7D7
 
 toolbar.iconbar.unfocused:              flat gradient vertical
 toolbar.iconbar.unfocused.justify:      Center
 toolbar.iconbar.unfocused.borderColor:  #353535
 toolbar.iconbar.unfocused.borderWidth:  1
-toolbar.iconbar.unfocused.color:        #F1F2F0
-toolbar.iconbar.unfocused.colorTo:      #F1F2F0
-toolbar.iconbar.unfocused.textColor:    #101010
+toolbar.iconbar.unfocused.color:        #202121
+toolbar.iconbar.unfocused.colorTo:      #202121
+toolbar.iconbar.unfocused.textColor:    #D5D7D7
 
 !WINDOW OPTIONS
 
 window.title.height:            20
 window.justify:                 Left
 window.bevelWidth:              0
-window.borderColor:             #242424
+window.borderColor:             #1D1D1D
 window.borderWidth:             1
 
 !window.roundCorners:            <{Top|Bottom}{Left|Right}>
@@ -96,81 +96,81 @@ window.borderWidth:             1
 !window.label.active.textColor:  <color>
 
 window.title.focus:             raised gradient vertical
-window.title.focus.color:       #0D0D0D
-window.title.focus.colorTo:     #0D0D0D
+window.title.focus.color:       #1C211E
+window.title.focus.colorTo:     #1C211E
 
 window.title.unfocus:           raised gradient vertical
-window.title.unfocus.color:     #0D0D0D
-window.title.unfocus.colorTo:   #0D0D0D
+window.title.unfocus.color:     #1C211E
+window.title.unfocus.colorTo:   #1C211E
 
 window.label.focus:             raised gradient horizontal
-window.label.focus.color:       #161E0B
-window.label.focus.colorTo:     #425C24
-window.label.focus.textColor:   #FFFFFF
+window.label.focus.color:       #043927
+window.label.focus.colorTo:     #5097A4
+window.label.focus.textColor:   #D5D7D7
 
 window.label.unfocus:           raised gradient vertical
-window.label.unfocus.color:     #272B30
-window.label.unfocus.colorTo:   #272B30
-window.label.unfocus.textColor: #F0F0F0
+window.label.unfocus.color:     #1C211E
+window.label.unfocus.colorTo:   #1C211E
+window.label.unfocus.textColor: #D5D7D7
 
 window.button.focus:            raised gradient vertical
-window.button.focus.color:      #272B30
-window.button.focus.colorTo:    #272B30
-window.button.focus.picColor:   #F0F0F0
+window.button.focus.color:      #1C211E
+window.button.focus.colorTo:    #1C211E
+window.button.focus.picColor:   #D5D7D7
 
 window.button.pressed:          sunken
 window.button.pressed.color:    #42473E
 window.button.pressed.colorTo:  #42473E
 
 window.button.unfocus:          raised gradient vertical
-window.button.unfocus.color:    #272B30
-window.button.unfocus.colorTo:  #272B30
-window.button.unfocus.picColor: #F0F0F0
+window.button.unfocus.color:    #1C211E
+window.button.unfocus.colorTo:  #1C211E
+window.button.unfocus.picColor: #D5D7D7
 
 window.grip.focus:              flat
-window.grip.focus.color:        #42473E
-window.grip.focus.colorTo:      #42473E
+window.grip.focus.color:        #3D4040
+window.grip.focus.colorTo:      #3D4040
 
 window.grip.unfocus:            flat
 window.grip.unfocus.color:      #404D3E
 window.grip.unfocus.colorTo:    #404D3E
 
 window.handle.focus:            flat
-window.handle.focus.color:      #272B30
-window.handle.focus.colorTo:    #272B30
+window.handle.focus.color:      #1C211E
+window.handle.focus.colorTo:    #1C211E
 
 window.handle.unfocus:          flat
-window.handle.unfocus.color:    #272B30
-window.handle.unfocus.colorTo:  #272B30
+window.handle.unfocus.color:    #1C211E
+window.handle.unfocus.colorTo:  #1C211E
 
-window.handleWidth:             3
+window.handleWidth:             4
 
 !MENU OPTIONS
 
 menu.itemHeight:                22
-menu.bevelWidth:                1
-menu.borderColor:               #242424
-menu.borderWidth:               1
+menu.bevelWidth:                2
+menu.borderColor:               #1D1D1D
+menu.borderWidth:               2
 menu.frame.justify:             Left
 !menu.bullet:                    <{empty|square|triangle|diamond}>
 menu.bullet:                    triangle
 menu.bullet.position:           Right
-menu.frame:                     flat gradient diagonal
-menu.frame.color:               #F1F2F0
-menu.frame.colorTo:             #F1F2F0
-menu.frame.disableColor:        #626262
-menu.frame.textColor:           #101010
+menu.frame:                     raised
+menu.frame.color:               #202121
+menu.frame.colorTo:             #202121
+menu.frame.disableColor:        #5097A4
+menu.frame.textColor:           #D5D7D7
 
-menu.hilite:                    flat gradient vertical
-menu.hilite.color:              #425C24
-menu.hilite.colorTo:            #425C24
+menu.hilite:                    raised
+menu.hilite.color:              #043927
+menu.hilite.colorTo:            #043927
 menu.hilite.justify:            left
-menu.hilite.textColor:          #FFFFFF
+menu.hilite.textColor:          #D5D7D7
 
-menu.title:                     flat
-menu.title.color:               #425C24
-menu.title.colorTo:             #425C24
-menu.title.textColor:           #FFFFFF
+menu.title:                     raised
+menu.title.color:               #043927
+menu.title.colorTo:             #043927
+menu.title.textColor:           #D5D7D7
 menu.title.justify:             Center
 menu.titleHeight:               20
 !menu.roundCorners:              <{Top|Bottom}{Left|Right}>
