--- a/.spectrwm_us.conf
+++ b/.spectrwm_us.conf
@@ -2,7 +2,7 @@
 # unbind with: bind[] = <keys>
 bind[bar_toggle]	= MOD+b
 bind[bar_toggle_ws]	= MOD+Shift+b
-bind[button2]		= MOD+v
+# bind[button2]		= MOD+v
 bind[cycle_layout]	= MOD+space
 bind[flip_layout]	= MOD+Shift+backslash
 bind[float_toggle]	= MOD+f
@@ -14,15 +14,15 @@ bind[focus_prev]	= Mod1+Shift+Tab
 bind[focus_urgent]	= MOD+u
 bind[height_grow]	= MOD+Shift+equal
 bind[height_shrink]	= MOD+Shift+minus
-bind[iconify]		= MOD+w
+bind[iconify]		= MOD+F6
 bind[initscr]		= MOD+Shift+i
 bind[lock]		= MOD+Shift+Delete
 bind[master_add]	= MOD+comma
 bind[master_del]	= MOD+period
 bind[master_grow]	= MOD+l
 bind[master_shrink]	= MOD+h
-bind[maximize_toggle]	= MOD+e
-bind[menu]		= Mod1+F2
+bind[maximize_toggle]	= Mod1+F10
+bind[menu]			= Mod1+F2
 bind[move_down]		= Mod1+Shift+Down
 bind[move_left]		= Mod1+Shift+Left
 bind[move_right]	= Mod1+Shift+Right
@@ -61,8 +61,8 @@ bind[mvws_9]		= MOD+Shift+9
 bind[name_workspace]	= MOD+Shift+slash
 # bind[quit]		= MOD+Shift+q
 bind[quit]              = MOD+Shift+e
-bind[raise_toggle]	= MOD+Shift+r
-bind[restart]   = MOD+q
+bind[raise_toggle]	= MOD+r
+bind[restart]		= MOD+q
 bind[rg_1]		= MOD+KP_End
 bind[rg_2]		= MOD+KP_Down
 bind[rg_3]		= MOD+KP_Next
@@ -84,12 +84,12 @@ bind[stack_reset]	= MOD+Shift+space
 bind[swap_main]		= MOD+Return
 bind[swap_next]		= MOD+Shift+j
 bind[swap_prev]		= MOD+Shift+k
-bind[term]		    = MOD+Shift+Return
-bind[uniconify]		= MOD+Shift+w
+bind[term]		= MOD+Shift+Return
+bind[uniconify]		= MOD+Shift+F6
 bind[version]		= MOD+Shift+v
 bind[width_grow]	= MOD+equal
 bind[width_shrink]	= MOD+minus
-bind[wind_del]		= MOD+x
+# bind[wind_del]	= MOD+x
 bind[wind_kill]		= MOD+Shift+x
 bind[wind_del]		= Mod1+F4
 bind[wind_kill]		= Mod1+Shift+F4
@@ -118,7 +118,7 @@ bind[ws_9]		= MOD+9
 #bind[ws_next]		= MOD+Right
 #bind[ws_next_all]	= MOD+Up
 bind[ws_next_all]	= Mod1+Control+Right
-bind[ws_prev_all]   = Mod1+Control+Left
+bind[ws_prev_all]	= Mod1+Control+Left
 #bind[ws_next_move]	= MOD+Shift+Up
 #bind[ws_prev]		= MOD+Left
 #bind[ws_prev_all]	= MOD+Down
@@ -130,9 +130,7 @@ bind[ws_prior]		= MOD+a
 #bind[move] = MOD+Button1
 #bind[resize] = MOD+Button3
 #bind[resize_centered] = MOD+Shift+Button3
-bind[] = MOD+Button1
-bind[] = MOD+Button3
-bind[] = MOD+Shift+Button3
+
 bind[move] = Mod1+Button1
 bind[resize] = Mod1+Button3
 bind[resize_centered] = Mod1+Shift+Button3
