--- a/.spectrwm.conf
+++ b/.spectrwm.conf
@@ -4,22 +4,22 @@
 
 workspace_limit		= 9
 focus_mode		= manual
-# focus_close		= previous
-# focus_close_wrap	= 1
-# focus_default		= last
-# spawn_position	= next
-# workspace_clamp	= 1
-# warp_focus		= 1
-# warp_pointer		= 1
+focus_close		= previous
+focus_close_wrap	= 1
+focus_default		= last
+spawn_position		= next
+workspace_clamp		= 1
+warp_focus		= 1
+warp_pointer		= 1
 
 # Window Decoration
-border_width		= 2
-color_focus		= rgb:45/45/3A
-color_focus_maximized	= rgb:45/45/3A
-color_unfocus		= rgb:16/16/16
-color_unfocus_maximized	= rgb:16/16/16
-region_padding	= 0
-tile_gap	= 0
+border_width		= 1
+color_focus		= rgb:66/5d/66
+color_focus_maximized	= rgb:66/5d/66
+color_unfocus		= rgb:20/1F/21
+color_unfocus_maximized	= rgb:20/1F/21
+region_padding		= 0
+tile_gap		= 0
 
 # Region containment
 # Distance window must be dragged/resized beyond the region edge before it is
@@ -32,27 +32,28 @@ tile_gap	= 0
 # Bar Settings
 bar_enabled		= 1
 bar_border_width	= 1
-bar_border[1]		= rgb:4C/4C/4C
-bar_border_unfocus[1]	= rgb:4C/4C/4C
-bar_color[1]		= rgb:29/29/29
-bar_font_color[1]	= rgb:D6/D6/D6
+bar_border[1]		= rgb:3A/3A/3A
+bar_border_unfocus[1]	= rgb:3A/3A/3A
+bar_color[1]		= rgb:24/24/24
+bar_font_color[1]	= rgb:D0/D0/D0
 # bar_font		= -xos4-terminus-medium-r-normal-*-14-140-72-72-c-80-iso10646-1
-bar_font		= Envy Code R:size=11:antialias=true:hintsyle=slight
+# bar_font		= Envy Code R:size=11:antialias=true:hintsyle=slight
+bar_font		= Inconsolata LGC Markup:regular:size=11:antialias=true:hintstyle=slight
 bar_action		= conky
 bar_justify		= left
 bar_format		= +2<+I+4<+S+8<%a %e %b %k:%M+8<+A
 # bar_format		= +2<+I+4<+S+4<+6<+A
 # bar_at_bottom		= 1
-# stack_enabled		= 1
+stack_enabled		= 1
 # clock_enabled		= 1
 # clock_format		= %a %b %d %R %Z %Y
 # iconic_enabled	= 0
-# maximize_hide_bar	= 0
-# window_class_enabled	= 0
-# window_instance_enabled	= 0
-# window_name_enabled	= 0
-# verbose_layout		= 1
-# urgent_enabled		= 1
+maximize_hide_bar	= 1
+window_class_enabled	= 0
+window_instance_enabled	= 0
+window_name_enabled	= 0
+verbose_layout		= 1
+urgent_enabled		= 1
 
 # Dialog box size ratio when using TRANSSZ quirk; 0.3 < dialog_ratio <= 1.0
 # dialog_ratio		= 0.6
@@ -67,14 +68,14 @@ bar_format		= +2<+I+4<+S+8<%a %e %b %k:%M+8<+A
 # autorun		= ws[2]:xombrero http://www.openbsd.org
 
 # Customize workspace layout at start
-layout		= ws[1]:0:0:0:0:horizontal
-layout		= ws[2]:0:1:0:0:horizontal
-layout		= ws[3]:0:0:0:0:fullscreen
-layout		= ws[4]:0:0:0:0:vertical
-layout		= ws[5]:0:1:0:0:vertical_flip
-layout		= ws[6]:0:0:0:0:fullscreen
-layout		= ws[7]:0:0:0:0:fullscreen
-layout		= ws[8]:0:0:0:0:vertical
+layout		= ws[1]:0:0:0:0:vertical
+layout		= ws[2]:0:1:0:0:vertical #vertical grid 
+layout		= ws[3]:0:0:0:0:horizontal
+layout		= ws[4]:0:0:0:0:vertical_flip
+layout		= ws[5]:0:0:0:0:horizontal_flip
+layout		= ws[6]:0:0:0:0:max
+layout		= ws[7]:0:0:0:0:vertical
+layout		= ws[8]:0:0:0:0:vertical_flip
 layout		= ws[9]:0:0:0:0:horizontal
 
 # Set workspace name at start
@@ -93,7 +94,7 @@ keyboard_mapping = ~/.spectrwm_us.conf
 
 # Validated default programs:
 program[lock]		= slock
-program[term]		= urxvt
+program[term]		= st
 program[menu]		= rofi -modi run,drun,window,combi -show run
 
 # To disable validation of the above, free the respective binding(s):
@@ -116,28 +117,34 @@ bind[] = MOD+Shift+Button3
 # bind[firefox]		= MOD+Shift+b
 
 program[firefox]	= firefox
-bind[firefox]		= MOD+XF86HomePage
+bind[firefox]		= MOD+w
+
+program[firefox]	= firefox
+bind[firefox]		= XF86AudioNext
 
 program[mail]		= thunderbird
-bind[mail]		= MOD+XF86Mail
+bind[mail]			= MOD+t
 
-program[fmangr]		= pcmanfm
+program[mail]		= thunderbird
+bind[mail]			= XF86AudioPlay
+
+program[fmangr]		= thunar
 bind[fmangr]		= Menu
 
-program[editor]		= emacs
+program[editor]		= subl3
 bind[editor]		= MOD+Control+l
 
 program[art]		= gimp
-bind[art]		= MOD+Control+g
+bind[art]			= MOD+Control+g
 
 program[ssheet]		= libreoffice --calc
 bind[ssheet]		= MOD+Control+p
 
 program[lodoc]		= libreoffice --writer
-bind[lodoc]		= MOD+Control+o
+bind[lodoc]			= MOD+Control+o
 
 program[volup]		= amixer -q sset Master 5%+ unmute
-bind[volup]		= XF86AudioRaiseVolume
+bind[volup]			= XF86AudioRaiseVolume
 
 program[voldown]	= amixer -q sset Master 5%- unmute
 bind[voldown]		= XF86AudioLowerVolume
@@ -145,23 +152,20 @@ bind[voldown]		= XF86AudioLowerVolume
 program[volmute]	= amixer sset Master,0 toggle
 bind[volmute]		= XF86AudioMute
 
-program[URxvt]		= urxvt
-bind[URxvt]		= Mod1+F1
+program[sterm]		= st
+bind[sterm]         = Mod1+F1
 
-program[Xterm]		= st
-bind[Xterm]		= Mod1+F3
+program[Xterm]		= xterm
+bind[Xterm]		    = Mod1+F3
 
 program[Calc]		= xcalc
-bind[Calc]		= XF86Calculator
+bind[Calc]		    = XF86Calculator
 
 program[Logout]		= rofi-logout
 bind[Logout]		= MOD+Shift+q
 
-program[gtkmenu]	= rofi-apps
-bind[gtkmenu]		= Mod + d
-
 program[jgmenu]         = jgmenu_run
-bind[jgmenu]            = MOD+p
+bind[jgmenu]            = MOD+x
 
 program[dim]            = acpilight -dec 5
 bind[dim]               = XF86MonBrightnessDown
@@ -198,7 +202,3 @@ quirk[Thunderbird:Msgcompose] = FLOAT + ANYWHERE
 quirk[Sakura:sakura] = FLOAT + ANYWHERE
 quirk[Xfce4-appfinder:xfce4-appfinder] = FLOAT + ANYWHERE
 quirk[Gimp:gimp] = FULLSCREEN
-
-
-
-
