--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ set -g prefix C-q
 # 0 is too far from ` ;)
 set -g base-index 1
 
-# set -g default-shell "/bin/bash"
-set -g default-shell "/bin/zsh"
+set -g default-shell "/bin/bash"
+# set -g default-shell "/bin/zsh"
 
 # Automatically set window title
 set-window-option -g automatic-rename on
@@ -56,13 +56,13 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour15
+set -g status-bg "#2B2B2E"
+set -g status-fg "#B7B7B7"
 set -g status-interval 3
 set -g status-left-length 64
 set -g status-right-length 144
 
-set -g status-right '#[fg=Colour11]#(psuinfo -Cuca -N -S4)#[default]   #[fg=Colour12]#(/home/doug/bin/Loadavg)#[default]   #[fg=Colour10]#(/home/doug/bin/Batt0.sh)#[default]   #[fg=Colour7]%H:%M#[default] '
+set -g status-right '#[fg=#B39759]#(psuinfo -Cuca -N -S4)#[default]   #[fg=#B39759]#(/home/doug/bin/Loadavg)#[default]   #[fg=#B39759]#(/home/doug/bin/Batt0.sh)#[default]   #[fg=#B7B7B7]%k:%M#[default] '
 
 set -g pane-border-fg colour236
 set -g pane-active-border-fg colour236
